--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,7 +9,7 @@
   object-fit: cover;
   width: 100%;
   height: 100vh;
-  
+
   position: relative;
 }
 
@@ -28,7 +28,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: var(--color-primary-variant);
+  background-color: var(--color-bg-varient);
   opacity: 0.8;
 }
 
@@ -57,10 +57,10 @@
 
 @media screen and (max-width: 640px) {
   .content > h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .content > h5 {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
