--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -7,7 +7,7 @@
   background: tranpsparent;
   width: 100%;
   height: 90px;
-  z-index: 10;
+  z-index: 1;
 
   position: fixed;
 }
@@ -18,6 +18,8 @@
 }
 
 .logo-text {
+  display: flex;
+  gap: 5px;
   font-size: 20px;
   font-weight: 700;
   color: var(--color-white) !important;
@@ -41,12 +43,15 @@
   color: var(--color-white);
 }
 
-.hamburger {
-  display: none;
+@media screen and (max-width: 1040px) {
+  .nav-menu{
+    display: none;
+  }
 }
 
-@media screen and (max-width: 1040px) {
-  .nav-menu {
+/*
+
+.nav-menu {
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -72,4 +77,4 @@
   .hamburger {
     display: initial;
   }
-}
+*/
