--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -38,6 +38,7 @@
   top: 50%;
   left: 50%;
   text-align: center;
+  white-space: nowrap;
 }
 
 .content > h1 {
@@ -57,10 +58,14 @@
 
 @media screen and (max-width: 640px) {
   .content > h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   .content > h5 {
-    font-size: 1.5rem;
+    font-size: 1rem;
+  }
+
+  .content > .btn {
+    font-size: 1rem;
   }
 }
