--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -3,12 +3,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-
   background: tranpsparent;
   width: 100%;
   height: 90px;
   z-index: 1;
-
+  transition: var(--transition);
   position: fixed;
 }
 
@@ -40,6 +39,10 @@
 }
 
 .nav-menu > a:hover {
+  color: var(--color-white);
+}
+
+.nav-menu > a.active {
   color: var(--color-white);
 }
 
