--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -1,3 +1,60 @@
 .experience-container {
-  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  min-height: 800px;
+  gap: 30px;
+}
+
+.experience-container > h1 {
+  padding: 40px;
+  font-size: 2rem;
+}
+
+.experience-container > .card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.experience-container > .card-container > .card {
+  text-align: center;
+  width: 250px;
+  height: 300px;
+}
+
+.experience-container > .card-container > .card:hover {
+  top: -20px;
+}
+
+.experience-container > .card-container > .card > .card-header {
+  font-size: 30px;
+}
+
+.experience-container > .card-container > .card > .card-header > h1 {
+  font-size: 25px;
+}
+
+.experience-container > .card-container > .card > .card-header > h6 {
+  font-size: 15px;
+}
+
+.experience-container > .card-container > .card > .card-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+  flex-direction: column;
+  font-size: 17px;
+  gap: 5px;
+}
+
+@media screen and (max-width: 1040px) {
+  .card-container {
+    flex-direction: column;
+  }
 }
