--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,35 +1,33 @@
 .header-container {
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  z-index: -1;
   background: transparent;
 }
 
-.scroll-background {
-  object-fit: cover;
+video {
   width: 100%;
   height: 100vh;
-
-  position: relative;
-}
-
-.scroll-background > video {
-  width: 100%;
-  height: 100%;
   background-size: cover;
   background-position: center;
   object-fit: cover;
+  z-index: -1;
+  position: fixed;
+}
+
+.scroll-background {
+  height: 100vh;
+  width: 100%;
 }
 
 .scroll-background::after {
   content: "";
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
   background-color: var(--color-bg-varient);
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 .header-container > .content {
@@ -41,18 +39,18 @@
   white-space: nowrap;
 }
 
-.content > h1 {
+.header-container > .content > h1 {
   font-size: 4rem;
   padding: 0.6rem 0 1.5rem;
 }
 
-.content > h5 {
+.header-container > .content > h5 {
   font-size: 2rem;
   font-weight: 200;
   padding: 0.6rem 0 1.5rem;
 }
 
-.content > .btn {
+.header-container > .content > .btn {
   margin: 1rem 0.2rem;
 }
 
