Implemented Portfolio section

--- a/src/components/socials/Socials.css
+++ b/src/components/socials/Socials.css
@@ -1,4 +1,5 @@
 .socials-container {
+  text-decoration: none;
   padding: 40px;
   width: 100%;
   display: flex;
@@ -6,6 +7,14 @@
   gap: 10px;
 }
 
+.socials-container > a {
+  color: var(--color-light);
+}
+
 .socials-container > a:hover {
   color: white;
+}
+
+.socials-container > a:visited {
+  color: inherit;
 }
