--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,8 @@
 .header-container {
+  display: flex;
+  flex-direction: column;
+
+  
   height: 100vh;
   width: 100%;
   background: transparent;
