--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -31,11 +31,31 @@
   top: -20px;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-body > .button-container {
+  display: flex;
+  gap: 4px;
+}
+
+.projects-container .card-container > .card > .display {
+  border: 2px solid var(--color-primary);
+  border-radius: 0.4rem;
+  cursor: pointer;
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+}
+
 .projects-container > .card-container > .card > .card-header {
   font-size: 30px;
 }
 
-.projects-container > .card-container > .card > .card-header > h1 {
+.projects-container > .card-container > .card > h1 {
   font-size: 25px;
 }
 
