Added functionality to contacts and about section

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 100px;
-  height: 600px;
+  min-height: 800px;
 }
 
 .about-container > h1 {
