--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,5 +1,9 @@
 .contact-container {
-  min-height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 800px;
   text-align: center;
   transition: var(--transition);
 }
@@ -56,11 +60,9 @@ textarea {
   resize: none;
 }
 
-input:focus {
-  border: 1px solid var(--color-primary-variant);
-}
-
-textarea:focus {
+*:focus {
+  transition: var(--transition);
+  outline: none !important;
   border: 1px solid var(--color-primary-variant);
 }
 
