--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,9 @@ section {
 
 .btn {
   background-color: var(--color-primary);
-  width: max-content;
-  display: inline-block;
+  width: 120px;
+  display: flex;
+  justify-content: center;
   color: var(--color-primary-variant);
   padding: 0.75rem 1.2rem;
   border-radius: 0.4rem;
